min kr4 answers

--- a/materials/min_kr4/main.tex
+++ b/materials/min_kr4/main.tex
@@ -103,34 +103,34 @@
 
 \begin{enumerate}
   \item Дайте определение ошибки первого и второго рода, критической области.
-  \item Укажите формулу доверительного интервала с уровнем доверия $(1-\alpha)$ для вероятности успеха, построенного по случайной выборке большого размера из распределения Бернулли $Bin(1, p)$.  
+  \item Укажите формулу доверительного интервала с уровнем доверия $(1-\alpha)$ для вероятности успеха, построенного по случайной выборке большого размера из распределения Бернулли $Bin(1, p)$.
 \end{enumerate}
 
 Для следующего блока вопросов предполагается, что величины $X_1$, $X_2$, \ldots, $X_n$ независимы и нормальны $\cN(\mu;\sigma^2)$.
-Укажите формулу для статистики: 
+Укажите формулу для статистики:
 
 \begin{enumerate}[resume]
-  \item Статистика, проверяющая гипотезу о математическом ожидании при известной дисперсии $\sigma^2$, 
-    и её распределение при справедливости основной гипотезы  $H_0$: $\mu = \mu_0$. 
-  \item Статистика, проверяющая гипотезу о математическом ожидании при неизвестной дисперсии $\sigma^2$, 
-    и её распределение при справедливости основной гипотезы  $H_0$: $\mu = \mu_0$. 
+  \item Статистика, проверяющая гипотезу о математическом ожидании при известной дисперсии $\sigma^2$,
+    и её распределение при справедливости основной гипотезы  $H_0$: $\mu = \mu_0$.
+  \item Статистика, проверяющая гипотезу о математическом ожидании при неизвестной дисперсии $\sigma^2$,
+    и её распределение при справедливости основной гипотезы  $H_0$: $\mu = \mu_0$.
 \end{enumerate}
 
 
-Для следующего блока вопросов предполагается, что есть две независимые случайные выборки: 
-выборка $X_1$, $X_2$, \ldots{ }размера $n_x$ из нормального распределения $\cN(\mu_x;\sigma^2_x)$ 
-и выборка $Y_1$, $Y_2$, \ldots{ }размера $n_y$ из нормального распределения $\cN(\mu_y;\sigma^2_y)$. 
+Для следующего блока вопросов предполагается, что есть две независимые случайные выборки:
+выборка $X_1$, $X_2$, \ldots{ }размера $n_x$ из нормального распределения $\cN(\mu_x;\sigma^2_x)$
+и выборка $Y_1$, $Y_2$, \ldots{ }размера $n_y$ из нормального распределения $\cN(\mu_y;\sigma^2_y)$.
 
 Укажите формулу для статистики или границ доверительного интервала:
 
 \begin{enumerate}[resume]
   \item Доверительный интервал для разницы математических ожиданий, когда дисперсии известны;
   \item Доверительный интервал для разницы математических ожиданий, когда дисперсии не известны, но равны;
-  \item Статистика, проверяющая гипотезу о разнице математических ожиданий при известных дисперсиях, 
+  \item Статистика, проверяющая гипотезу о разнице математических ожиданий при известных дисперсиях,
     и её распределение при справедливости основной гипотезы $H_0$: $\mu_x - \mu_y = \Delta_0$;
-  \item Статистика, проверяющая гипотезу о разнице математических ожиданий при неизвестных, но равных дисперсиях, 
+  \item Статистика, проверяющая гипотезу о разнице математических ожиданий при неизвестных, но равных дисперсиях,
     и её распределение при справедливости основной гипотезы $H_0$: $\mu_x - \mu_y = \Delta_0$;
-  \item Статистика, проверяющая гипотезу о равенстве дисперсий, 
+  \item Статистика, проверяющая гипотезу о равенстве дисперсий,
     и её распределение при справедливости основной гипотезы $H_0$: $\sigma^2_x = \sigma^2_y$.
 \end{enumerate}
 
@@ -159,7 +159,7 @@
 \item Пусть $X = (X_{1},..., X_{n})$ и $Y = (Y_{1},..., Y_{m})$ — независимые случайные
 выборки из распределения Бернулли с параметрами $p_{X} \in (0;1)$ и $p_{Y} \in (0;1)$ соответственно. Известно, что $n = 100$, $\bar{x}_{n} = 0.6$, $m = 200$, $\bar{y}_{m} = 0.4$. Постройте приближенный 95\%-ый доверительный интервал для отношения разности вероятностей успеха $p_{X} - p_{Y}$.
 
-\item Дядя Вова (Владимир Николаевич) и Скрипач (Гедеван) зарабатывают на Плюке чатлы, чтобы купить гравицапу. Число заработанных за $i$-ый день чатлов имеет распределение Пуассона с неизвестным параметром $\lambda$. Заработки в различные дни независимы. За прошедшие 100 дней они заработали 250 чатлов. 
+\item Дядя Вова (Владимир Николаевич) и Скрипач (Гедеван) зарабатывают на Плюке чатлы, чтобы купить гравицапу. Число заработанных за $i$-ый день чатлов имеет распределение Пуассона с неизвестным параметром $\lambda$. Заработки в различные дни независимы. За прошедшие 100 дней они заработали 250 чатлов.
 
 С помощью метода максимального правдоподобия постройте приближенный 95\%-ый доверительный интервал для неизвестного параметра $\lambda$.
 
@@ -171,11 +171,11 @@ f(x,\lambda)=
 0 \text{ при } x < 0 \\
 \end{cases}
 \]
-где $\lambda > 0$ — неизвестный параметр распределения. Известно, что $n = 100$ и $\bar{x}_n = 0.52$. 
+где $\lambda > 0$ — неизвестный параметр распределения. Известно, что $n = 100$ и $\bar{x}_n = 0.52$.
 
 С помощью метода максимального правдоподобия постройте приближенный 95\%-ый доверительный интервал для параметра $\lambda$.
 
-% \item Пусть $X = (X_{1},..., X_{n})$  — случайная выборка из равномерного распределения на отрезке $[0; \theta]$, где  $\theta > 0$ — неизвестный параметр распределения. Известно, что $n = 100$ и $\bar{x}_n = 0.57$. 
+% \item Пусть $X = (X_{1},..., X_{n})$  — случайная выборка из равномерного распределения на отрезке $[0; \theta]$, где  $\theta > 0$ — неизвестный параметр распределения. Известно, что $n = 100$ и $\bar{x}_n = 0.57$.
 
 % С помощью метода максимального правдоподобия постройте приближенный 95\%-ый доверительный интервал для параметра $\theta$.
 % тут брутальный дельта-метод :) это не минимум :)
@@ -240,7 +240,8 @@ H_{0}:p = 0.5, \\
 H_{1}:p > 0.5 \\
 \end{cases}$
 
-\item Пусть $X = (X_{1},..., X_{n})$ и $Y = (Y_{1},..., Y_{m})$-две независимые случайные выборки из распределения Бернулли с неизвестными параметрами $p_{X} \in (0; 1)$ и $p_{Y} \in (0; 1)$. Имеется следующая информация о реализациях этих случайных выборок: $n = 100$, $\sum_{i=1}^{n} x_{i} = 60$, $m = 150$,$\sum_{j=1}^{m} y_{j} = 50$. На уровне значимости $\alpha = 0.05$ требуется протестировать следующую гипотезу: $\begin{cases}
+\item Пусть $X = (X_{1},..., X_{n})$ и $Y = (Y_{1},..., Y_{m})$-две независимые случайные выборки из распределения Бернулли с неизвестными параметрами $p_{X} \in (0; 1)$ и $p_{Y} \in (0; 1)$. Имеется следующая информация о реализациях этих случайных выборок: $n = 100$, $\sum_{i=1}^{n} x_{i} = 60$, $m = 150$,$\sum_{j=1}^{m} y_{j} = 50$. На уровне значимости $\alpha = 0.05$ требуется протестировать следующую гипотезу:
+$\begin{cases}
 H_{0}:p_{X} = p_{Y}, \\
 H_{1}:p_{X} \neq p_{Y} \\
 \end{cases}$
@@ -251,7 +252,7 @@ H_{1}:p_{X} \neq p_{Y} \\
 \begin{center}\begin{tabular}{r|rr}
 \toprule
    & Пётр звонит   & Пётр не звонит  \\ \midrule
-Вася ест           & $200$ & $40$ \\ 
+Вася ест           & $200$ & $40$ \\
  Вася не ест       & $25$ & $100$  \\ \bottomrule
 \end{tabular}\end{center}
 На уровне значимости 5\% протестируйте гипотезу о том, что Пётр звонит Васе
@@ -260,8 +261,37 @@ H_{1}:p_{X} \neq p_{Y} \\
 \item Пусть $X = (X_{1},..., X_{n})$ — случайная выборка из нормального распределения
 с математическим ожиданием $\mu \in \mathbb{R}$ и дисперсией $v > 0$, где $\mu$ и $v$ — неизвестные параметры. Известно, что выборка состоит из $n = 100$ наблюдений, $\sum_{i=1}^{n} x_{i} = 30$, $\sum_{i=1}^{n} x^2_{i} = 146$. При помощи теста отношения правдоподобия протестируйте гипотезу $H_{0}:v = 1$ на уровне значимости 5\%.
 
-
-
 \end{enumerate}
 
+\section{Ответы}
+
+
+\begin{enumerate}
+\item $\left[-1.6 - 1.65 \cdot \frac{2}{\sqrt{3}}; -1.6 + 1.65 \cdot \frac{2}{\sqrt{3}} \right]$
+\item $\left[-1.6 - 2.92 \cdot \sqrt{\frac{18.33}{3}}; -1.6 + 2.92 \cdot \sqrt{\frac{18.33}{3}} \right]$
+\item $\left[\frac{18.09 \cdot 2}{4.61}; \frac{18.09 \cdot 2}{0.21} \right]$
+\item $\left[-1.6 - (-2.6) - 1.96 \cdot \sqrt{\frac{2}{3} + \frac{1}{2}}; -1.6 - (-2.6) + 1.96 \cdot \sqrt{\frac{2}{3} + \frac{1}{2}} \right]$
+\item $\left[1.04 - (-0.37) - 3.18 \cdot \sqrt{3.02} \sqrt{\frac{1}{3} + \frac{1}{2}}; 1.04 - (-0.37) + 3.18 \cdot \sqrt{3.02} \sqrt{\frac{1}{3} + \frac{1}{2}} \right]$
+\item $\left[0.45 - 1.96 \cdot \sqrt{\frac{0.45 \cdot 0.55}{100}}; 0.45 + 1.96 \cdot \sqrt{\frac{0.45 \cdot 0.55}{100}} \right]$
+\item $\left[0.6 - 0.4 - 1.96  \cdot \sqrt{\frac{0.6\cdot0.4}{100} + \frac{0.4 \cdot 0.6}{200}}; 0.6 - 0.4 + 1.96 \cdot \sqrt{\frac{0.6\cdot0.4}{100} + \frac{0.4 \cdot 0.6}{200}} \right]$
+\item $\left[2.5 - 1.96 \cdot \sqrt{\frac{1}{40}}; 2.5 + 1.96 \cdot \sqrt{\frac{1}{40}} \right]$
+\item $\left[\frac{1}{0.52} - 1.96 \cdot \sqrt{\frac{1}{100 \cdot 0.52^2}}; \frac{1}{0.52} + 1.96 \cdot \sqrt{\frac{1}{100 \cdot 0.52^2}} \right]$
+\item
+\begin{enumerate}
+\item $\approx 0.02$
+\item $\approx 0.02$
+\item $\approx 0.98$
+\end{enumerate}
+\item $0.2$
+\item Нет оснований отвергать $H_0$.
+\item Нет оснований отвергать $H_0$.
+\item Нет оснований отвергать $H_0$.
+\item Нет оснований отвергать $H_0$.
+\item Нет оснований отвергать $H_0$.
+\item Основная гипотеза отвергается.
+\item Основная гипотеза отвергается.
+\item Нет оснований отвергать $H_0$.
+\item Основная гипотеза отвергается.
+\item
+\end{enumerate}
 \end{document}
