min kr4 answers added

--- a/materials/min_kr4/main.tex
+++ b/materials/min_kr4/main.tex
@@ -182,7 +182,7 @@ f(x,\lambda)=
 
 
 \item Пусть $X = (X_{1},..., X_{n})$ — случайная выборка из нормального распределения с неизвестным математическим ожиданием $\mu$ и известной дисперсией $\sigma^2 = 4$. Объем выборки $n = 16$. Для тестирования основной гипотезы $H_{0}:\mu = 0$ против
-альтернативной гипотезы $H_{1}:\mu = 2$ вы используете критерий: если $\bar{X} \leq 1$, то вы принимаете гипотезу $H_{0}$ , в противном случае вы отвергаете гипотезу $H_{0}$ в пользу гипотезы $H_{1}$. Найдите
+альтернативной гипотезы $H_{1}:\mu = 2$ вы используете критерий: если $\bar{X} \leq 1$, то вы не отвергаете гипотезу $H_{0}$ , в противном случае вы отвергаете гипотезу $H_{0}$ в пользу гипотезы $H_{1}$. Найдите
 
 \begin{enumerate}
    \item  вероятность ошибки 1-го рода;
@@ -269,7 +269,7 @@ H_{1}:p_{X} \neq p_{Y} \\
 \begin{enumerate}
 \item $\left[-1.6 - 1.65 \cdot \frac{2}{\sqrt{3}}; -1.6 + 1.65 \cdot \frac{2}{\sqrt{3}} \right]$
 \item $\left[-1.6 - 2.92 \cdot \sqrt{\frac{18.33}{3}}; -1.6 + 2.92 \cdot \sqrt{\frac{18.33}{3}} \right]$
-\item $\left[\frac{18.09 \cdot 2}{4.61}; \frac{18.09 \cdot 2}{0.21} \right]$
+\item $\left[\frac{17.43 \cdot 2}{4.61}; \frac{17.43 \cdot 2}{0.21} \right]$
 \item $\left[-1.6 - (-2.6) - 1.96 \cdot \sqrt{\frac{2}{3} + \frac{1}{2}}; -1.6 - (-2.6) + 1.96 \cdot \sqrt{\frac{2}{3} + \frac{1}{2}} \right]$
 \item $\left[1.04 - (-0.37) - 3.18 \cdot \sqrt{3.02} \sqrt{\frac{1}{3} + \frac{1}{2}}; 1.04 - (-0.37) + 3.18 \cdot \sqrt{3.02} \sqrt{\frac{1}{3} + \frac{1}{2}} \right]$
 \item $\left[0.45 - 1.96 \cdot \sqrt{\frac{0.45 \cdot 0.55}{100}}; 0.45 + 1.96 \cdot \sqrt{\frac{0.45 \cdot 0.55}{100}} \right]$
@@ -283,15 +283,15 @@ H_{1}:p_{X} \neq p_{Y} \\
 \item $\approx 0.98$
 \end{enumerate}
 \item $0.2$
-\item Нет оснований отвергать $H_0$.
-\item Нет оснований отвергать $H_0$.
-\item Нет оснований отвергать $H_0$.
-\item Нет оснований отвергать $H_0$.
-\item Нет оснований отвергать $H_0$.
-\item Основная гипотеза отвергается.
-\item Основная гипотеза отвергается.
-\item Нет оснований отвергать $H_0$.
-\item Основная гипотеза отвергается.
-\item
+\item $z_{obs} \approx -1.39 $, $z_{crit} = 1.28$, нет оснований отвергать $H_0$.
+\item $t_{obs} \approx -0.65$, $t_{crit} = 1.89$, нет оснований отвергать $H_0$.
+\item $z_{obs} \approx 0.93$, $z_{crit} = -1.65$, нет оснований отвергать $H_0$.
+\item $t_{obs} \approx 0.89$, $t_{crit} = -2.35$, нет оснований отвергать $H_0$.
+\item $F_{obs} \approx 95.37$, $F_{crit} = 199.5$, нет оснований отвергать $H_0$.
+\item $z_{obs} \approx 2.04$, $z_{crit} = 1.65$, основная гипотеза отвергается.
+\item $z_{obs} \approx 4.16$, $z_{crit} = 1.96$, основная гипотеза отвергается.
+\item $\gamma_{obs} \approx 0.26$, $\gamma_{crit} = 5.99$, нет оснований отвергать $H_0$.
+\item $\gamma_{obs} \approx 139.4$, $\gamma_{crit} = 3.84$, основная гипотеза отвергается.
+\item $LR_{obs} \approx 3.33$, $LR_{crit} = 3.84$, нет оснований отвергать $H_0$.
 \end{enumerate}
 \end{document}
