--- a/tests/2016_final.tex
+++ b/tests/2016_final.tex
@@ -900,15 +900,15 @@
  \AMCcompleteMulti
   \begin{questionmult}{4} % тип вопроса (questionmult — множественный выбор) и в фигурных — номер вопроса
 
-Трёх случайно выбранных студентов 2-го курса попросили оценить сложность Теории вероятностей и Статистики по 10 бальной шкале
+Трёх случайно выбранных студентов 2-го курса попросили оценить сложность Теории вероятностей и Статистики по 100 бальной шкале
 
 \vspace{5mm}
 \begin{tabular}{lrrr}
   \toprule
    & Аким & Ариадна & Темуужин \\
    \midrule
-   Теория вероятностей & 6 & 7 & 8 \\
-   Статистика & 5 & 6 & 10 \\
+   Теория вероятностей & 70 & 75 & 82 \\
+   Статистика & 64 & 69 & 100 \\
   \bottomrule
 \end{tabular}
 \vspace{5mm}
@@ -918,7 +918,7 @@
 
  \begin{multicols}{3} % располагаем ответы в 3 колонки
    \begin{choices} % опция [o] не рандомизирует порядок ответов
-      \correctchoice{$1/2$}
+      \correctchoice{$0.51$}
       \wrongchoice{$3/8$}
       \wrongchoice{$1/3$}
       \wrongchoice{$0.05$}
