kr4 2017 mistake fixed

--- a/tests/2016_final.tex
+++ b/tests/2016_final.tex
@@ -900,7 +900,7 @@
  \AMCcompleteMulti
   \begin{questionmult}{4} % тип вопроса (questionmult — множественный выбор) и в фигурных — номер вопроса
 
-Трёх случайно выбранных студентов 2-го курса попросили оценить сложность Теории вероятностей и Статистики по 100 бальной шкале
+Трёх случайно выбранных студентов 2-го курса попросили оценить сложность Теории вероятностей и Статистики по 100 балльной шкале
 
 \vspace{5mm}
 \begin{tabular}{lrrr}
