--- a/tests/2016_final.tex
+++ b/tests/2016_final.tex
@@ -5,9 +5,9 @@
 
  \begin{multicols}{3} % располагаем ответы в 3 колонки
    \begin{choices} % опция [o] не рандомизирует порядок ответов
-      %\correctchoice{$F_{m-1,n-1}$}
+      \correctchoice{$F_{m-1,n-1}$}
       \wrongchoice{$F_{m+1,n+1}$}
-      \correctchoice{$F_{m,n}$}
+      %\correctchoice{$F_{m,n}$}
       \wrongchoice{$F_{m,n - 2}$}
       \wrongchoice{$t_{m+n-2}$}
       \wrongchoice{$\chi^2_{m+n-2}$}
@@ -281,7 +281,7 @@
 \element{2016_final_prob_borya}{ % в фигурных скобках название группы вопросов
  \AMCcompleteMulti
   \begin{questionmult}{7} % тип вопроса (questionmult — множественный выбор) и в фигурных — номер вопроса
-   По большой выборке была построена оценка  максимального правдоподобия $\hat a$. Оказалось, что $\ell''(\hat a) = -2$. Ширина 95\%-го доверительного интервала для параметра $a$ примерно равна
+   По большой выборке была построена оценка  максимального правдоподобия $\hat a$. Оказалось, что $\ell''(\hat a) = -4$. Ширина 95\%-го доверительного интервала для параметра $a$ примерно равна
  \begin{multicols}{3} % располагаем ответы в 3 колонки
    \begin{choices} % опция [o] не рандомизирует порядок ответов
       \correctchoice{$2$}
