min kr 4 mistake fixed

--- a/materials/min_kr4/main.tex
+++ b/materials/min_kr4/main.tex
@@ -292,6 +292,6 @@ H_{1}:p_{X} \neq p_{Y} \\
 \item $z_{obs} \approx 4.16$, $z_{crit} = 1.96$, основная гипотеза отвергается.
 \item $\gamma_{obs} \approx 0.26$, $\gamma_{crit} = 5.99$, нет оснований отвергать $H_0$.
 \item $\gamma_{obs} \approx 139.4$, $\gamma_{crit} = 3.84$, основная гипотеза отвергается.
-\item $LR_{obs} \approx 3.33$, $LR_{crit} = 3.84$, нет оснований отвергать $H_0$.
+\item $LR_{obs} \approx 5.5$, $LR_{crit} = 3.84$, основная гипотеза отвергается.
 \end{enumerate}
 \end{document}
