--- a/tests/2015_final.tex
+++ b/tests/2015_final.tex
@@ -1,6 +1,6 @@
 \element{prob_one_sample}{ % в фигурных скобках название группы вопросов
  \AMCcompleteMulti
-  \begin{questionmult}{1} % тип вопроса (questionmult --- множественный выбор) и в фигурных --- номер вопроса
+  \begin{questionmult}{1} % тип вопроса (questionmult — множественный выбор) и в фигурных — номер вопроса
   Случайные величины $X$ и $Y$ распределены нормально. Для тестирования гипотезы о равенстве дисперсий выбирается $m$ наблюдений случайной величины $X$ и $n$ наблюдений случайной величины $Y$. Какое распределение может иметь статистика, используемая в данном случае?
  \begin{multicols}{3} % располагаем ответы в 3 колонки
    \begin{choices} % опция [o] не рандомизирует порядок ответов
@@ -16,7 +16,7 @@
 
 \element{prob_one_sample}{ % в фигурных скобках название группы вопросов
  \AMCcompleteMulti
-  \begin{questionmult}{2} % тип вопроса (questionmult --- множественный выбор) и в фигурных --- номер вопроса
+  \begin{questionmult}{2} % тип вопроса (questionmult — множественный выбор) и в фигурных — номер вопроса
   Требуется проверить гипотезу о равенстве математических ожиданий в двух нормальных выборках размером $m$ и $n$. Если дисперсии неизвестны, но равны, то тестовая статистика имеет распределение
  \begin{multicols}{3} % располагаем ответы в 3 колонки
    \begin{choices} % опция [o] не рандомизирует порядок ответов
@@ -33,7 +33,7 @@
 
 \element{prob_one_sample}{ % в фигурных скобках название группы вопросов
  \AMCcompleteMulti
-  \begin{questionmult}{3} % тип вопроса (questionmult --- множественный выбор) и в фигурных --- номер вопроса
+  \begin{questionmult}{3} % тип вопроса (questionmult — множественный выбор) и в фигурных — номер вопроса
   Требуется проверить гипотезу о равенстве дисперсий по двум нормальным выборкам размером $20$ и $16$ наблюдений. Несмещённая оценка дисперсии по первой выборке составила $60$, по второй — $90$. Тестовая статистика может быть равна
  \begin{multicols}{3} % располагаем ответы в 3 колонки
    \begin{choices} % опция [o] не рандомизирует порядок ответов
@@ -50,7 +50,7 @@
 
 \element{prob_one_sample}{ % в фигурных скобках название группы вопросов
  \AMCcompleteMulti
-  \begin{questionmult}{4} % тип вопроса (questionmult --- множественный выбор) и в фигурных --- номер вопроса
+  \begin{questionmult}{4} % тип вопроса (questionmult — множественный выбор) и в фигурных — номер вопроса
   Требуется проверить гипотезу о равенстве математических ожиданий по двум нормальным выборкам размером $20$ и $16$ наблюдений. Истинные дисперсии по обеим выборкам известны, совпадают и равны $16$. Разница выборочных средних равна $1$. Тестовая статистика может быть равна
  \begin{multicols}{3} % располагаем ответы в 3 колонки
    \begin{choices} % опция [o] не рандомизирует порядок ответов
@@ -67,7 +67,7 @@
 
 \element{prob_one_sample}{ % в фигурных скобках название группы вопросов
  \AMCcompleteMulti
-  \begin{questionmult}{5} % тип вопроса (questionmult --- множественный выбор) и в фигурных --- номер вопроса
+  \begin{questionmult}{5} % тип вопроса (questionmult — множественный выбор) и в фигурных — номер вопроса
   При проверке гипотезе о равенстве математических ожиданий в двух нормальных выборках размеров $m$ и $n$ при известных, но не равных дисперсиях, тестовая статистика имеет распределение
  \begin{multicols}{3} % располагаем ответы в 3 колонки
    \begin{choices} % опция [o] не рандомизирует порядок ответов
@@ -84,7 +84,7 @@
 
 \element{prob_one_sample}{ % в фигурных скобках название группы вопросов
  \AMCcompleteMulti
-  \begin{questionmult}{6} % тип вопроса (questionmult --- множественный выбор) и в фигурных --- номер вопроса
+  \begin{questionmult}{6} % тип вопроса (questionmult — множественный выбор) и в фигурных — номер вопроса
   При проверке гипотезы о равенстве долей используется следующее распределение
  \begin{multicols}{3} % располагаем ответы в 3 колонки
    \begin{choices} % опция [o] не рандомизирует порядок ответов
@@ -101,7 +101,7 @@
 
 \element{prob_one_sample_rejected}{ % в фигурных скобках название группы вопросов
  \AMCcompleteMulti
-  \begin{questionmult}{7} % тип вопроса (questionmult --- множественный выбор) и в фигурных --- номер вопроса
+  \begin{questionmult}{7} % тип вопроса (questionmult — множественный выбор) и в фигурных — номер вопроса
    Есть две нормально распределённых выборки размером $20$ и $16$ наблюдений. Истинные дисперсии по обеим выборкам неизвестны и равны. Выборочные средние по обеим выборкам совпадают. Гипотеза о равенстве математических ожиданий
  %\begin{multicols}{3} % располагаем ответы в 3 колонки
    \begin{choices} % опция [o] не рандомизирует порядок ответов
@@ -118,7 +118,7 @@
 
 \element{prob_one_sample}{ % в фигурных скобках название группы вопросов
  \AMCcompleteMulti
-  \begin{questionmult}{8} % тип вопроса (questionmult --- множественный выбор) и в фигурных --- номер вопроса
+  \begin{questionmult}{8} % тип вопроса (questionmult — множественный выбор) и в фигурных — номер вопроса
   Для проверки гипотезы о равенстве долей в двух выборках  могут использоваться следующие распределения
  \begin{multicols}{3} % располагаем ответы в 3 колонки
    \begin{choices} % опция [o] не рандомизирует порядок ответов
@@ -134,8 +134,8 @@
 
 \element{prob_one_sample}{ % в фигурных скобках название группы вопросов
  \AMCcompleteMulti
-  \begin{questionmult}{9} % тип вопроса (questionmult --- множественный выбор) и в фигурных --- номер вопроса
-  Доля успехов в первой выборке равна $0.55$, доля успехов во второй выборке --- $0.4$. Количество наблюдений в выборках равно $40$ и $20$ соответственно. Тестовая статистика для проверки гипотезы о равенстве долей может быть равна
+  \begin{questionmult}{9} % тип вопроса (questionmult — множественный выбор) и в фигурных — номер вопроса
+  Доля успехов в первой выборке равна $0.55$, доля успехов во второй выборке — $0.4$. Количество наблюдений в выборках равно $40$ и $20$ соответственно. Тестовая статистика для проверки гипотезы о равенстве долей может быть равна
  \begin{multicols}{3} % располагаем ответы в 3 колонки
    \begin{choices} % опция [o] не рандомизирует порядок ответов
       \correctchoice{$1.1$}
@@ -150,8 +150,8 @@
 
 \element{prob_one_sample}{ % в фигурных скобках название группы вопросов
  \AMCcompleteMulti
-  \begin{questionmult}{10} % тип вопроса (questionmult --- множественный выбор) и в фигурных --- номер вопроса
-  Доля успехов в первой выборке равна $0.8$, доля успехов во второй выборке --- $0.3$. Количество наблюдений в выборках $40$ и $20$ соответственно. Гипотеза о равенстве долей
+  \begin{questionmult}{10} % тип вопроса (questionmult — множественный выбор) и в фигурных — номер вопроса
+  Доля успехов в первой выборке равна $0.8$, доля успехов во второй выборке — $0.3$. Количество наблюдений в выборках $40$ и $20$ соответственно. Гипотеза о равенстве долей
  %\begin{multicols}{3} % располагаем ответы в 3 колонки
    \begin{choices} % опция [o] не рандомизирует порядок ответов
      \correctchoice{отвергается на любом разумном уровне значимости}
@@ -188,7 +188,7 @@
 
 \element{prob_two_samples}{ % в фигурных скобках название группы вопросов
  \AMCcompleteMulti
-  \begin{questionmult}{2} % тип вопроса (questionmult --- множественный выбор) и в фигурных --- номер вопроса
+  \begin{questionmult}{2} % тип вопроса (questionmult — множественный выбор) и в фигурных — номер вопроса
   Для выборки $X_1,\ldots,X_n$, имеющей нормальное распределение, проверяется гипотеза $H_0: \sigma^2=\sigma_0^2$ против $H_a: \sigma^2 > \sigma_0^2$. Критическая область имеет вид
  %\begin{multicols}{3} % располагаем ответы в 3 колонки
    \begin{choices} % опция [o] не рандомизирует порядок ответов
@@ -205,7 +205,7 @@
 
 % \element{prob_two_samples_rejected}{ % в фигурных скобках название группы вопросов
 %  \AMCcompleteMulti
-%   \begin{questionmult}{3} % тип вопроса (questionmult --- множественный выбор) и в фигурных --- номер вопроса
+%   \begin{questionmult}{3} % тип вопроса (questionmult — множественный выбор) и в фигурных — номер вопроса
 %   Для выборки $X_1,\ldots,X_n$, имеющей нормальное распределение, проверяется гипотеза $H_0: \sigma^2=\sigma_0^2$ против $H_a: \sigma^2 < \sigma_0^2$. Критическая область имеет вид
 %  %\begin{multicols}{3} % располагаем ответы в 3 колонки
 %    \begin{choices} % опция [o] не рандомизирует порядок ответов
@@ -221,7 +221,7 @@
 
 \element{prob_two_samples}{ % в фигурных скобках название группы вопросов
  \AMCcompleteMulti
-  \begin{questionmult}{4} % тип вопроса (questionmult --- множественный выбор) и в фигурных --- номер вопроса
+  \begin{questionmult}{4} % тип вопроса (questionmult — множественный выбор) и в фигурных — номер вопроса
   При подбрасывании игральной кости 600 раз шестерка выпала 105 раз. Гипотеза о том, что кость правильная
  %\begin{multicols}{3} % располагаем ответы в 3 колонки
    \begin{choices} % опция [o] не рандомизирует порядок ответов
@@ -238,8 +238,8 @@
 
 \element{prob_two_samples}{ % в фигурных скобках название группы вопросов
  \AMCcompleteMulti
-  \begin{questionmult}{5} % тип вопроса (questionmult --- множественный выбор) и в фигурных --- номер вопроса
-  Величины $X_1,\ldots,X_n$ --- выборка из нормально распределенной случайной величины с неизвестным математическим ожиданием и известной дисперсией. На уровне значимости $\alpha$ проверяется гипотеза $H_0: \mu = \mu_0$ против $H_a: \mu \neq \mu_0$. Обозначим $\varphi_1$ и $\varphi_2$ вероятности ошибок первого и второго рода соответственно. Между параметрами задачи всегда выполнено соотношение
+  \begin{questionmult}{5} % тип вопроса (questionmult — множественный выбор) и в фигурных — номер вопроса
+  Величины $X_1,\ldots,X_n$ — выборка из нормально распределенной случайной величины с неизвестным математическим ожиданием и известной дисперсией. На уровне значимости $\alpha$ проверяется гипотеза $H_0: \mu = \mu_0$ против $H_a: \mu \neq \mu_0$. Обозначим $\varphi_1$ и $\varphi_2$ вероятности ошибок первого и второго рода соответственно. Между параметрами задачи всегда выполнено соотношение
  \begin{multicols}{3} % располагаем ответы в 3 колонки
    \begin{choices} % опция [o] не рандомизирует порядок ответов
       \correctchoice{$\varphi_1 = \alpha$}
@@ -255,7 +255,7 @@
 
 \element{prob_two_samples}{ % в фигурных скобках название группы вопросов
  \AMCcompleteMulti
-  \begin{questionmult}{6} % тип вопроса (questionmult --- множественный выбор) и в фигурных --- номер вопроса
+  \begin{questionmult}{6} % тип вопроса (questionmult — множественный выбор) и в фигурных — номер вопроса
   По случайной выборке из 200 наблюдений было оценено выборочное среднее $\bar{X} = 25$  и несмещённая оценка дисперсии $\hat{\sigma}^2 = 25$. В рамках проверки гипотезы $H_0: \mu = 20$ против $H_a: \mu > 20$ можно сделать вывод, что гипотеза $H_0$
  %\begin{multicols}{3} % располагаем ответы в 3 колонки
    \begin{choices} % опция [o] не рандомизирует порядок ответов
@@ -272,7 +272,7 @@
 
 \element{prob_two_samples}{ % в фигурных скобках название группы вопросов
  \AMCcompleteMulti
-  \begin{questionmult}{7} % тип вопроса (questionmult --- множественный выбор) и в фигурных --- номер вопроса
+  \begin{questionmult}{7} % тип вопроса (questionmult — множественный выбор) и в фигурных — номер вопроса
    По выборке $X_1,\ldots, X_n$ из нормального распределения строятся по стандартным формулам доверительные интервалы для математического ожидания. Получен интервал $(a_1,a_2)$ при известной дисперсии и интервал $(b_1,b_2)$ при неизвестной дисперсии. Всегда справедливы следующие соотношения:
  \begin{multicols}{2} % располагаем ответы в 3 колонки
    \begin{choices} % опция [o] не рандомизирует порядок ответов
@@ -289,8 +289,8 @@
 
 \element{prob_two_samples}{ % в фигурных скобках название группы вопросов
  \AMCcompleteMulti
-  \begin{questionmult}{8} % тип вопроса (questionmult --- множественный выбор) и в фигурных --- номер вопроса
-  Величины $X_1,\ldots,X_n$ --- выборка из нормального распределения.  Статистика $U=\frac{5-\bar{X}}{5/\sqrt{n}}$ применима для проверки
+  \begin{questionmult}{8} % тип вопроса (questionmult — множественный выбор) и в фигурных — номер вопроса
+  Величины $X_1,\ldots,X_n$ — выборка из нормального распределения.  Статистика $U=\frac{5-\bar{X}}{5/\sqrt{n}}$ применима для проверки
  %\begin{multicols}{3} % располагаем ответы в 3 колонки
    \begin{choices} % опция [o] не рандомизирует порядок ответов
       \wrongchoice{гипотезы $H_0: \mu = 5$ при известной дисперсии, равной 5, при любых $n$}
@@ -305,7 +305,7 @@
 
 \element{prob_two_samples}{ % в фигурных скобках название группы вопросов
  \AMCcompleteMulti
-  \begin{questionmult}{9} % тип вопроса (questionmult --- множественный выбор) и в фигурных --- номер вопроса
+  \begin{questionmult}{9} % тип вопроса (questionmult — множественный выбор) и в фигурных — номер вопроса
 Выборочная доля успехов в некотором испытании составляет $0.3$. Исследователь Ромео хочет, чтобы длина двустороннего 95\%-го доверительного интервала для истинной доли не превышала $0.1$. Количество наблюдений, необходимых для этого, примерно равно
  \begin{multicols}{3} % располагаем ответы в 3 колонки
    \begin{choices} % опция [o] не рандомизирует порядок ответов
@@ -321,8 +321,8 @@
 
 \element{prob_two_samples}{ % в фигурных скобках название группы вопросов
  \AMCcompleteMulti
-  \begin{questionmult}{10} % тип вопроса (questionmult --- множественный выбор) и в фигурных --- номер вопроса
-  Пусть $X_1,\ldots,X_n$ --- выборка из нормального распределения с известной дисперсией $\sigma^2$. Пусть $U = \frac{\bar{X}-\mu_0}{\sigma/\sqrt{n}}$. Величина $U^2$ имеет распределение
+  \begin{questionmult}{10} % тип вопроса (questionmult — множественный выбор) и в фигурных — номер вопроса
+  Пусть $X_1,\ldots,X_n$ — выборка из нормального распределения с известной дисперсией $\sigma^2$. Пусть $U = \frac{\bar{X}-\mu_0}{\sigma/\sqrt{n}}$. Величина $U^2$ имеет распределение
  \begin{multicols}{3} % располагаем ответы в 3 колонки
    \begin{choices} % опция [o] не рандомизирует порядок ответов
      \correctchoice{$\chi^2_1$}
@@ -360,7 +360,7 @@
 
 \element{prob_sample_char}{ % в фигурных скобках название группы вопросов
  \AMCcompleteMulti
-  \begin{questionmult}{1} % тип вопроса (questionmult --- множественный выбор) и в фигурных --- номер вопроса
+  \begin{questionmult}{1} % тип вопроса (questionmult — множественный выбор) и в фигурных — номер вопроса
   Дана реализация выборки: 3, 1, 2. Выборочный начальный момент первого порядка равен
  \begin{multicols}{3} % располагаем ответы в 3 колонки
    \begin{choices} % опция [o] не рандомизирует порядок ответов
@@ -376,7 +376,7 @@
 
 \element{prob_sample_char}{ % в фигурных скобках название группы вопросов
  \AMCcompleteMulti
-  \begin{questionmult}{2} % тип вопроса (questionmult --- множественный выбор) и в фигурных --- номер вопроса
+  \begin{questionmult}{2} % тип вопроса (questionmult — множественный выбор) и в фигурных — номер вопроса
   Дана реализация выборки: 3, 1, 2. Несмещённая оценка дисперсии равна
  \begin{multicols}{3} % располагаем ответы в 3 колонки
    \begin{choices} % опция [o] не рандомизирует порядок ответов
@@ -393,7 +393,7 @@
 
 \element{prob_sample_char}{ % в фигурных скобках название группы вопросов
  \AMCnoCompleteMulti
-  \begin{questionmult}{3} % тип вопроса (questionmult --- множественный выбор) и в фигурных --- номер вопроса
+  \begin{questionmult}{3} % тип вопроса (questionmult — множественный выбор) и в фигурных — номер вопроса
   Выберите НЕВЕРНОЕ утверждение про эмпирическую функцию распределения $F_n(x)$
  %\begin{multicols}{3} % располагаем ответы в 3 колонки
    \begin{choices} % опция [o] не рандомизирует порядок ответов
@@ -411,7 +411,7 @@
 
 \element{prob_sample_char}{ % в фигурных скобках название группы вопросов
  \AMCcompleteMulti
-  \begin{questionmult}{4} % тип вопроса (questionmult --- множественный выбор) и в фигурных --- номер вопроса
+  \begin{questionmult}{4} % тип вопроса (questionmult — множественный выбор) и в фигурных — номер вопроса
  Юрий Петров утверждает, что обычно посещает половину занятий по Статистике. За последние полгода из 36 занятий он не посетил ни одного. Вычислите значение критерия хи-квадрат Пирсона для гипотезы, что утверждение Юрия Петрова истинно и укажите число степеней свободы
  \begin{multicols}{3} % располагаем ответы в 3 колонки
    \begin{choices} % опция [o] не рандомизирует порядок ответов
@@ -428,7 +428,7 @@
 
 \element{prob_sample_char}{ % в фигурных скобках название группы вопросов
  \AMCcompleteMulti
-  \begin{questionmult}{5} % тип вопроса (questionmult --- множественный выбор) и в фигурных --- номер вопроса
+  \begin{questionmult}{5} % тип вопроса (questionmult — множественный выбор) и в фигурных — номер вопроса
   Производитель фломастеров попросил трёх человек оценить два вида фломастеров: «Лесенка» и «Erich Krause» по 10-балльной шкале:
 
 \begin{center}
@@ -458,7 +458,7 @@ Erich Krause & 8 & 9 & 7 \\
 
 \element{prob_sample_char}{ % в фигурных скобках название группы вопросов
  \AMCcompleteMulti
-  \begin{questionmult}{6} % тип вопроса (questionmult --- множественный выбор) и в фигурных --- номер вопроса
+  \begin{questionmult}{6} % тип вопроса (questionmult — множественный выбор) и в фигурных — номер вопроса
   Производитель фломастеров попросил трёх человек оценить два вида фломастеров: «Лесенка» и «Erich Krause» по 10-балльной шкале:
 
 \begin{center}
@@ -488,7 +488,7 @@ Erich Krause & 8 & 9 & 7 \\
 
 \element{prob_sample_char}{ % в фигурных скобках название группы вопросов
  \AMCcompleteMulti
-  \begin{questionmult}{7} % тип вопроса (questionmult --- множественный выбор) и в фигурных --- номер вопроса
+  \begin{questionmult}{7} % тип вопроса (questionmult — множественный выбор) и в фигурных — номер вопроса
    Кузнец Вакула в течение 100 лет ведет статистику о прилете аистов и рождении младенцев на хуторе близ Диканьки. У него получилась следующая таблица сопряженности
 
 \begin{center}
@@ -519,7 +519,7 @@ Erich Krause & 8 & 9 & 7 \\
 
 \element{prob_sample_char}{ % в фигурных скобках название группы вопросов
  \AMCcompleteMulti
-  \begin{questionmult}{8} % тип вопроса (questionmult --- множественный выбор) и в фигурных --- номер вопроса
+  \begin{questionmult}{8} % тип вопроса (questionmult — множественный выбор) и в фигурных — номер вопроса
   В коробке 50 купюр пяти различных номиналов. Случайным образом достаются две купюры. Номиналы вынимаемых купюр
  \begin{multicols}{2} % располагаем ответы в 3 колонки
    \begin{choices} % опция [o] не рандомизирует порядок ответов
@@ -537,7 +537,7 @@ Erich Krause & 8 & 9 & 7 \\
 
 \element{prob_sample_char}{ % в фигурных скобках название группы вопросов
  \AMCcompleteMulti
-  \begin{questionmult}{9} % тип вопроса (questionmult --- множественный выбор) и в фигурных --- номер вопроса
+  \begin{questionmult}{9} % тип вопроса (questionmult — множественный выбор) и в фигурных — номер вопроса
 Экзамен принимают два преподавателя: Злой и Добрый. Они поставили следующие оценки:
 
 \begin{center}
@@ -566,7 +566,7 @@ Erich Krause & 8 & 9 & 7 \\
 
 \element{prob_sample_char}{ % в фигурных скобках название группы вопросов
  \AMCcompleteMulti
-  \begin{questionmult}{10} % тип вопроса (questionmult --- множественный выбор) и в фигурных --- номер вопроса
+  \begin{questionmult}{10} % тип вопроса (questionmult — множественный выбор) и в фигурных — номер вопроса
 Датчик случайных чисел выдал два значения псевдослучайных чисел: $0.5$ и $0.9$. Вычислите значение критерия Колмогорова и проверьте гипотезу о соответствии распределения равномерному на уровне значимости $0.1$. Критическое значение статистики Колмогорова для уровня значимости $0.1$ и двух наблюдений равно $0.776$.
  \begin{multicols}{3} % располагаем ответы в 3 колонки
    \begin{choices} % опция [o] не рандомизирует порядок ответов
@@ -607,7 +607,7 @@ Erich Krause & 8 & 9 & 7 \\
 
 \element{prob_ml_mm}{ % в фигурных скобках название группы вопросов
  \AMCnoCompleteMulti
-  \begin{questionmult}{1} % тип вопроса (questionmult --- множественный выбор) и в фигурных --- номер вопроса
+  \begin{questionmult}{1} % тип вопроса (questionmult — множественный выбор) и в фигурных — номер вопроса
   Выберите НЕВЕРНОЕ утверждение про метод максимального правдоподобия (ММП):
  %\begin{multicols}{3} % располагаем ответы в 3 колонки
    \begin{choices} % опция [o] не рандомизирует порядок ответов
@@ -623,7 +623,7 @@ Erich Krause & 8 & 9 & 7 \\
 
 \element{prob_ml_mm}{ % в фигурных скобках название группы вопросов
  \AMCcompleteMulti
-  \begin{questionmult}{2} % тип вопроса (questionmult --- множественный выбор) и в фигурных --- номер вопроса
+  \begin{questionmult}{2} % тип вопроса (questionmult — множественный выбор) и в фигурных — номер вопроса
   Если величина $\hat\theta$ имеет нормальное распределение $\cN(2;0.01^2)$, то, согласно дельта-методу, $\hat\theta^2$ имеет примерно нормальное распределение
  \begin{multicols}{3} % располагаем ответы в 3 колонки
    \begin{choices} % опция [o] не рандомизирует порядок ответов
@@ -640,7 +640,7 @@ Erich Krause & 8 & 9 & 7 \\
 
 \element{prob_ml_mm}{ % в фигурных скобках название группы вопросов
  \AMCcompleteMulti
-  \begin{questionmult}{3} % тип вопроса (questionmult --- множественный выбор) и в фигурных --- номер вопроса
+  \begin{questionmult}{3} % тип вопроса (questionmult — множественный выбор) и в фигурных — номер вопроса
   Случайные величины $X_1$, $X_2$ и $X_3$ независимы и одинаково распределены,
 
 \begin{center}
@@ -670,7 +670,7 @@ Erich Krause & 8 & 9 & 7 \\
 
 \element{prob_ml_mm}{ % в фигурных скобках название группы вопросов
  \AMCcompleteMulti
-  \begin{questionmult}{4} % тип вопроса (questionmult --- множественный выбор) и в фигурных --- номер вопроса
+  \begin{questionmult}{4} % тип вопроса (questionmult — множественный выбор) и в фигурных — номер вопроса
     Случайные величины $X_1$, $X_2$ и $X_3$ независимы и одинаково распределены,
 
 \begin{center}
@@ -699,7 +699,7 @@ Erich Krause & 8 & 9 & 7 \\
 
 \element{prob_ml_mm}{ % в фигурных скобках название группы вопросов
  \AMCcompleteMulti
-  \begin{questionmult}{5} % тип вопроса (questionmult --- множественный выбор) и в фигурных --- номер вопроса
+  \begin{questionmult}{5} % тип вопроса (questionmult — множественный выбор) и в фигурных — номер вопроса
   Величины $X_1$, $X_2$, \ldots, $X_{2016}$ независимы и одинаково распределены, $\cN(\mu ; 42)$. Оказалось, что $\bar X =  -23$. Про оценки метода моментов, $\hat \mu_{MM}$, и метода максимального правдоподобия, $\hat \mu_{ML}$, можно утверждать, что
 
  \begin{multicols}{3} % располагаем ответы в 3 колонки
@@ -717,7 +717,7 @@ Erich Krause & 8 & 9 & 7 \\
 
 \element{prob_ml_mm}{ % в фигурных скобках название группы вопросов
  \AMCnoCompleteMulti
-  \begin{questionmult}{6} % тип вопроса (questionmult --- множественный выбор) и в фигурных --- номер вопроса
+  \begin{questionmult}{6} % тип вопроса (questionmult — множественный выбор) и в фигурных — номер вопроса
  Выберите НЕВЕРНОЕ утверждение про логарифмическую функцию правдоподобия $\ell(\theta)$
 
  %\begin{multicols}{3} % располагаем ответы в 3 колонки
@@ -735,7 +735,7 @@ Erich Krause & 8 & 9 & 7 \\
 
 \element{prob_ml_mm}{ % в фигурных скобках название группы вопросов
  \AMCcompleteMulti
-  \begin{questionmult}{7} % тип вопроса (questionmult --- множественный выбор) и в фигурных --- номер вопроса
+  \begin{questionmult}{7} % тип вопроса (questionmult — множественный выбор) и в фигурных — номер вопроса
 Величины $X_1$, \ldots, $X_n$ независимы и одинаково распределены, $\E(X_1^2)=2\theta + 4$. По выборке из 100 наблюдений оказалось, что $\sum_{i=1}^{100} X_i^2 = 200$. Оценка метода момента, $\hat\theta_{MM}$, равна
 
  \begin{multicols}{3} % располагаем ответы в 3 колонки
@@ -754,7 +754,7 @@ Erich Krause & 8 & 9 & 7 \\
 
 \element{prob_ml_mm}{ % в фигурных скобках название группы вопросов
  \AMCcompleteMulti
-  \begin{questionmult}{8} % тип вопроса (questionmult --- множественный выбор) и в фигурных --- номер вопроса
+  \begin{questionmult}{8} % тип вопроса (questionmult — множественный выбор) и в фигурных — номер вопроса
 По выборке из 100 наблюдений построена оценка метода максимального правдоподобия, $\hat \theta_{ML} = 42$. Вторая производная лог-функции правдоподобия равна $\ell''(\hat\theta) = -1$. Ширина 95\%-го доверительного интервала для неизвестного параметра $\theta$ примерно равна
  \begin{multicols}{3} % располагаем ответы в 3 колонки
    \begin{choices} % опция [o] не рандомизирует порядок ответов
@@ -772,8 +772,8 @@ Erich Krause & 8 & 9 & 7 \\
 
 \element{prob_ml_mm}{ % в фигурных скобках название группы вопросов
  \AMCcompleteMulti
-  \begin{questionmult}{9} % тип вопроса (questionmult --- множественный выбор) и в фигурных --- номер вопроса
-  Проверяется гипотеза $H_0$: $\theta = \gamma$ против альтернативной гипотезы $H_a$: $\theta \neq \gamma$, где $\theta$ и $\gamma$ --- два неизвестных параметра. Выберите верное утверждение о распределении статистики отношения правдоподобия, $LR$:
+  \begin{questionmult}{9} % тип вопроса (questionmult — множественный выбор) и в фигурных — номер вопроса
+  Проверяется гипотеза $H_0$: $\theta = \gamma$ против альтернативной гипотезы $H_a$: $\theta \neq \gamma$, где $\theta$ и $\gamma$ — два неизвестных параметра. Выберите верное утверждение о распределении статистики отношения правдоподобия, $LR$:
 
  \begin{multicols}{2} % располагаем ответы в 3 колонки
    \begin{choices} % опция [o] не рандомизирует порядок ответов
@@ -791,7 +791,7 @@ Erich Krause & 8 & 9 & 7 \\
 
 \element{prob_ml_mm}{ % в фигурных скобках название группы вопросов
  \AMCcompleteMulti
-  \begin{questionmult}{10} % тип вопроса (questionmult --- множественный выбор) и в фигурных --- номер вопроса
+  \begin{questionmult}{10} % тип вопроса (questionmult — множественный выбор) и в фигурных — номер вопроса
   По 100 наблюдениям получена оценка метода максимального правдоподобия, $\hat\theta = 20$, также известны значения лог-функции правдоподобия $\ell(20) = -10$ и $\ell(0)= - 50$. С помощью критерия отношения правдоподобия, $LR$, проверьте гипотезу $H_0$: $\theta = 0$ против $H_0$: $\theta \neq 0$ на уровне значимости 5\%.
  \begin{multicols}{2} % располагаем ответы в 3 колонки
    \begin{choices} % опция [o] не рандомизирует порядок ответов
@@ -833,8 +833,8 @@ Erich Krause & 8 & 9 & 7 \\
 
 \element{prob_estimators}{ % в фигурных скобках название группы вопросов
  \AMCcompleteMulti
-  \begin{questionmult}{1} % тип вопроса (questionmult --- множественный выбор) и в фигурных --- номер вопроса
-Пусть $X = (X_1, \ldots , X_n)$ --- случайная выборка из биномиального распределения $Bi(5, p)$. Известно, что $\P(X = x) =C_n^x p^x(1-p)^{n-x} $. Информация Фишера $I_n(p)$ равна:
+  \begin{questionmult}{1} % тип вопроса (questionmult — множественный выбор) и в фигурных — номер вопроса
+Пусть $X = (X_1, \ldots , X_n)$ — случайная выборка из биномиального распределения $Bi(5, p)$. Известно, что $\P(X = x) =C_n^x p^x(1-p)^{n-x} $. Информация Фишера $I_n(p)$ равна:
  \begin{multicols}{3} % располагаем ответы в 3 колонки
    \begin{choices} % опция [o] не рандомизирует порядок ответов
       \correctchoice{$\frac{5n}{p(1-p)}$}
@@ -849,8 +849,8 @@ Erich Krause & 8 & 9 & 7 \\
 
 \element{prob_estimators}{ % в фигурных скобках название группы вопросов
  \AMCcompleteMulti
-  \begin{questionmult}{2} % тип вопроса (questionmult --- множественный выбор) и в фигурных --- номер вопроса
-Пусть $X = (X_1, \ldots , X_n)$ --- случайная выборка из экспоненциального распределения с плотностью
+  \begin{questionmult}{2} % тип вопроса (questionmult — множественный выбор) и в фигурных — номер вопроса
+Пусть $X = (X_1, \ldots , X_n)$ — случайная выборка из экспоненциального распределения с плотностью
 \[
 f(x; \theta) =
 \begin{cases}
@@ -874,8 +874,8 @@ f(x; \theta) =
 
 \element{prob_estimators}{ % в фигурных скобках название группы вопросов
  \AMCcompleteMulti
-  \begin{questionmult}{3} % тип вопроса (questionmult --- множественный выбор) и в фигурных --- номер вопроса
-Пусть $X = (X_1, \ldots , X_n)$ --- случайная выборка из равномерного на $(0, \theta)$ распределения. При каком значении константы $c$ оценка  $\hat{\theta} = c \bar{X}$ является несмещённой?
+  \begin{questionmult}{3} % тип вопроса (questionmult — множественный выбор) и в фигурных — номер вопроса
+Пусть $X = (X_1, \ldots , X_n)$ — случайная выборка из равномерного на $(0, \theta)$ распределения. При каком значении константы $c$ оценка  $\hat{\theta} = c \bar{X}$ является несмещённой?
  \begin{multicols}{3} % располагаем ответы в 3 колонки
    \begin{choices} % опция [o] не рандомизирует порядок ответов
       \correctchoice{$2$}
@@ -890,8 +890,8 @@ f(x; \theta) =
 
 \element{prob_estimators_rejected}{ % в фигурных скобках название группы вопросов
  \AMCcompleteMulti
-  \begin{questionmult}{3} % тип вопроса (questionmult --- множественный выбор) и в фигурных --- номер вопроса
-Пусть $X = (X_1, \ldots , X_n)$ --- случайная выборка из биномиального распределения $Bi(5, p)$. При каком значении константы $c$ оценка  $\hat{p} = c \bar{X}$ является несмещённой?
+  \begin{questionmult}{3} % тип вопроса (questionmult — множественный выбор) и в фигурных — номер вопроса
+Пусть $X = (X_1, \ldots , X_n)$ — случайная выборка из биномиального распределения $Bi(5, p)$. При каком значении константы $c$ оценка  $\hat{p} = c \bar{X}$ является несмещённой?
  \begin{multicols}{3} % располагаем ответы в 3 колонки
    \begin{choices} % опция [o] не рандомизирует порядок ответов
       \correctchoice{$\frac{1}{5}$}
@@ -906,7 +906,7 @@ f(x; \theta) =
 
 \element{prob_estimators}{ % в фигурных скобках название группы вопросов
  \AMCcompleteMulti
-  \begin{questionmult}{4} % тип вопроса (questionmult --- множественный выбор) и в фигурных --- номер вопроса
+  \begin{questionmult}{4} % тип вопроса (questionmult — множественный выбор) и в фигурных — номер вопроса
 Последовательность оценок $\hat{\theta}_1, \hat{\theta}_2, ...$ называется состоятельной, если
  \begin{multicols}{2} % располагаем ответы в 3 колонки
    \begin{choices} % опция [o] не рандомизирует порядок ответов
@@ -922,8 +922,8 @@ f(x; \theta) =
 
 \element{prob_estimators_rejected}{ % в фигурных скобках название группы вопросов
  \AMCcompleteMulti
-  \begin{questionmult}{4} % тип вопроса (questionmult --- множественный выбор) и в фигурных --- номер вопроса
-Пусть $X = (X_1, \ldots , X_n)$ --- случайная выборка из распределения с плотностью
+  \begin{questionmult}{4} % тип вопроса (questionmult — множественный выбор) и в фигурных — номер вопроса
+Пусть $X = (X_1, \ldots , X_n)$ — случайная выборка из распределения с плотностью
 \[
 f(x; \theta) =
 \begin{cases}
@@ -947,8 +947,8 @@ f(x; \theta) =
 
 \element{prob_estimators}{ % в фигурных скобках название группы вопросов
  \AMCcompleteMulti
-  \begin{questionmult}{5} % тип вопроса (questionmult --- множественный выбор) и в фигурных --- номер вопроса
-Пусть $X = (X_1, \ldots , X_n)$ --- случайная выборка из равномерного на $(0, 2\theta)$ распределения. Оценка $\hat{\theta} = X_1$
+  \begin{questionmult}{5} % тип вопроса (questionmult — множественный выбор) и в фигурных — номер вопроса
+Пусть $X = (X_1, \ldots , X_n)$ — случайная выборка из равномерного на $(0, 2\theta)$ распределения. Оценка $\hat{\theta} = X_1$
  \begin{multicols}{2} % располагаем ответы в 3 колонки
    \begin{choices} % опция [o] не рандомизирует порядок ответов
       \correctchoice{Несмещённая}
@@ -963,8 +963,8 @@ f(x; \theta) =
 
 \element{prob_estimators_rejected}{ % в фигурных скобках название группы вопросов
  \AMCcompleteMulti
-  \begin{questionmult}{5} % тип вопроса (questionmult --- множественный выбор) и в фигурных --- номер вопроса
-Пусть $X = (X_1, \ldots , X_n)$ --- случайная выборка. Случайные величины $X_1, ... , X_n$ имеют дискретное распределение, которое задано при помощи таблицы
+  \begin{questionmult}{5} % тип вопроса (questionmult — множественный выбор) и в фигурных — номер вопроса
+Пусть $X = (X_1, \ldots , X_n)$ — случайная выборка. Случайные величины $X_1, ... , X_n$ имеют дискретное распределение, которое задано при помощи таблицы
 
 \begin{center}
 \begin{tabular}{lrrr} \toprule
@@ -991,8 +991,8 @@ $\P_{X_i}$ & $\frac{2}{3} - \theta$ & $\frac{1}{3}$ & $\theta$\\
 
 \element{prob_estimators_rejected}{ % в фигурных скобках название группы вопросов
  \AMCcompleteMulti
-  \begin{questionmult}{6} % тип вопроса (questionmult --- множественный выбор) и в фигурных --- номер вопроса
-Пусть $X = (X_1, \ldots , X_n)$ --- случайная выборка. Случайные величины $X_1, ... , X_n$ имеют дискретное распределение, которое задано при помощи таблицы
+  \begin{questionmult}{6} % тип вопроса (questionmult — множественный выбор) и в фигурных — номер вопроса
+Пусть $X = (X_1, \ldots , X_n)$ — случайная выборка. Случайные величины $X_1, ... , X_n$ имеют дискретное распределение, которое задано при помощи таблицы
 
 \begin{center}
 \begin{tabular}{lrrr} \toprule
@@ -1019,8 +1019,8 @@ $\P_{X_i}$ & $\frac{3}{4} - \theta$ & $\frac{1}{4}$ & $\theta$\\
 
 \element{prob_estimators}{ % в фигурных скобках название группы вопросов
  \AMCcompleteMulti
-  \begin{questionmult}{7} % тип вопроса (questionmult --- множественный выбор) и в фигурных --- номер вопроса
-Пусть $X = (X_1, \ldots , X_n)$ --- случайная выборка и $I_n(\theta)$ --- информация Фишера. Тогда несмещённая оценка $\hat{\theta}$ называется эффективной, если
+  \begin{questionmult}{7} % тип вопроса (questionmult — множественный выбор) и в фигурных — номер вопроса
+Пусть $X = (X_1, \ldots , X_n)$ — случайная выборка и $I_n(\theta)$ — информация Фишера. Тогда несмещённая оценка $\hat{\theta}$ называется эффективной, если
  \begin{multicols}{3} % располагаем ответы в 3 колонки
    \begin{choices} % опция [o] не рандомизирует порядок ответов
       \correctchoice{$\Var(\hat{\theta}) \cdot I_n (\theta) = 1$}
@@ -1035,8 +1035,8 @@ $\P_{X_i}$ & $\frac{3}{4} - \theta$ & $\frac{1}{4}$ & $\theta$\\
 
 \element{prob_estimators}{ % в фигурных скобках название группы вопросов
  \AMCcompleteMulti
-  \begin{questionmult}{8} % тип вопроса (questionmult --- множественный выбор) и в фигурных --- номер вопроса
-Пусть $X = (X_1, \ldots , X_n)$ --- случайная выборка и $\ell(\theta) = \ell(X_1, ... , X_n; \theta)$ --- логарифмическая функция правдоподобия. Тогда информация Фишера $I_n(\theta)$ равна
+  \begin{questionmult}{8} % тип вопроса (questionmult — множественный выбор) и в фигурных — номер вопроса
+Пусть $X = (X_1, \ldots , X_n)$ — случайная выборка и $\ell(\theta) = \ell(X_1, ... , X_n; \theta)$ — логарифмическая функция правдоподобия. Тогда информация Фишера $I_n(\theta)$ равна
  \begin{multicols}{3} % располагаем ответы в 3 колонки
    \begin{choices} % опция [o] не рандомизирует порядок ответов
       \correctchoice{$-\E \left( \frac{\partial^2 \ell (\theta)}{\partial \theta^2} \right)$}
@@ -1051,8 +1051,8 @@ $\P_{X_i}$ & $\frac{3}{4} - \theta$ & $\frac{1}{4}$ & $\theta$\\
 
 \element{prob_estimators}{ % в фигурных скобках название группы вопросов
  \AMCcompleteMulti
-  \begin{questionmult}{9} % тип вопроса (questionmult --- множественный выбор) и в фигурных --- номер вопроса
-Пусть $X = (X_1, \ldots , X_n)$ --- случайная выборка и $\ell(\theta) = \ell(X_1, ... , X_n; \theta)$ --- логарифмическая функция правдоподобия. Тогда информация Фишера $I_n(\theta)$ равна
+  \begin{questionmult}{9} % тип вопроса (questionmult — множественный выбор) и в фигурных — номер вопроса
+Пусть $X = (X_1, \ldots , X_n)$ — случайная выборка и $\ell(\theta) = \ell(X_1, ... , X_n; \theta)$ — логарифмическая функция правдоподобия. Тогда информация Фишера $I_n(\theta)$ равна
  \begin{multicols}{3} % располагаем ответы в 3 колонки
    \begin{choices} % опция [o] не рандомизирует порядок ответов
       \correctchoice{$\E \left( \left( \frac{\partial \ell (\theta)}{\partial \theta} \right) ^2 \right)$}
