--- a/tests/2016_midterm.tex
+++ b/tests/2016_midterm.tex
@@ -89,7 +89,7 @@
 
 \element{midterm_2016_rejected}{ % в фигурных скобках название группы вопросов
  \AMCcompleteMulti
-  \begin{questionmult}{5} % тип вопроса (questionmult --- множественный выбор) и в фигурных — номер вопроса
+  \begin{questionmult}{5} % тип вопроса (questionmult — множественный выбор) и в фигурных — номер вопроса
   Традиционно себя называют Стрельцами люди, родившиеся с 22 ноября по 21 декабря. Из-за прецессии земной оси линия Солнце–Земля указывает в созведие Стрельца в наше время с 17 декабря по 20 января. Предположим, что все даты рождения равновероятны. Вероятность того, что человек, называющий себя Стрельцом, родился в день, когда линия Солнце–Земля указывала в созвездие Стрельца, равна
  \begin{multicols}{3} % располагаем ответы в 3 колонки
    \begin{choices} % опция [o] не рандомизирует порядок ответов
@@ -106,7 +106,7 @@
 
 \element{midterm_2016}{ % в фигурных скобках название группы вопросов
  \AMCcompleteMulti
-  \begin{questionmult}{5} % тип вопроса (questionmult --- множественный выбор) и в фигурных — номер вопроса
+  \begin{questionmult}{5} % тип вопроса (questionmult — множественный выбор) и в фигурных — номер вопроса
   Монетка выпадает орлом с вероятностью $0.2$. Вероятность того, что при 10 подбрасываниях монетка выпадет орлом хотя бы один раз, равна
  \begin{multicols}{3} % располагаем ответы в 3 колонки
    \begin{choices} % опция [o] не рандомизирует порядок ответов
@@ -385,7 +385,7 @@
 
 \element{midterm_2016}{ % в фигурных скобках название группы вопросов
  \AMCcompleteMulti
-  \begin{questionmult}{45} % тип вопроса (questionmult --- множественный выбор) и в фигурных — номер вопроса
+  \begin{questionmult}{45} % тип вопроса (questionmult — множественный выбор) и в фигурных — номер вопроса
   Размер выплаты страховой компанией является неотрицательной случайной величиной с математическим ожиданием $50\,000$ рублей и стандартным отклонением $10\,000$ рублей. Согласно неравенству Чебышёва, вероятность того, что очередная выплата будет отличаться от своего математического ожидания не более чем на 20\,000 рублей, ограничена снизу числом
  \begin{multicols}{2} % располагаем ответы в 3 колонки
    \begin{choices} % опция [o] не рандомизирует порядок ответов
